# funcpp

./: .gitignore  .project  CMakeLists.txt  README.md  conanfile.txt
include/funcpp/: if_expressions.hpp  optional_pipe.hpp  type_selector.hpp
test/: catch_main.cpp  test_if_expr.cpp  test_type_selector.cpp
